# astaro-strongswan

./: Android.mk  Makefile.in  README.HA  aclocal.m4  configure  configure.in
scripts/: Makefile.in  dh_speed.c
src/: Makefile.in
src/_copyright/: Makefile.in
src/_updown/: Makefile.in
src/_updown_espmark/: Makefile.in
src/charon/: Makefile.in
src/checksum/: Makefile.in
src/dumm/: Makefile.in
src/include/: Makefile.in
src/ipsec/: Makefile.in  ipsec.8
src/libcharon/: Makefile.in
src/libfast/: Makefile.in
src/libfreeswan/: Makefile.in  pfkeyv2.h
src/libhydra/: Makefile.in
src/libsimaka/: Makefile.in
src/libstrongswan/: Makefile.am  Makefile.in
src/libstrongswan/plugins/serpent/: Makefile.am  serpent_plugin.c  serpent_plugin.h
src/libstrongswan/plugins/twofish/: Makefile.am  twofish_plugin.c  twofish_plugin.h
src/manager/: Makefile.in
src/medsrv/: Makefile.in
src/openac/: Makefile.in
src/pki/: Makefile.in
src/pluto/: Makefile.am  Makefile.in  alg_info.c  alg_info.h  connections.c  connections.h  constants.c  constants.h  crypto.c  demux.c  demux.h  ipsec.secrets.5  ipsec_doi.c  ipsec_doi.h  kernel.c  kernel.h  kernel_alg.c  kernel_alg.h  kernel_netlink.c  kernel_noklips.c  kernel_pfkey.c  keys.c  keys.h  log.h  modecfg.c  plutomain.c  rcv_whack.c  sa_sync.c  sa_sync.h  server.c  server.h  spdb.c  state.c  state.h  timer.c
src/scepclient/: Makefile.in
src/starter/: Makefile.in  args.c  cmp.c  confread.c  confread.h  interfaces.c  interfaces.h  invokepluto.c  ipsec.conf.5  keywords.c  lex.yy.c  (+5 more)
testing/: Makefile.in  testing.conf
(+101 files in other folders)
